--- a/src/client/ClientGUI.form
+++ b/src/client/ClientGUI.form
@@ -49,7 +49,6 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
@@ -501,8 +500,8 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jPanel7" max="32767" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <EmptySpace min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jPanel4" max="32767" attributes="0"/>
                               <Component id="startChatBtn" max="32767" attributes="0"/>
                           </Group>
@@ -783,12 +782,12 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jDesktopPane2" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jDesktopPane2" alignment="0" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jDesktopPane2" min="-2" max="-2" attributes="0"/>
+                          <Component id="jDesktopPane2" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                   </Layout>
